src/main/metadata/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Car_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle owner (since it does not necessarily have to be the complainant) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Car Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account Retail</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases(Car Owner)</relationshipLabel>
        <relationshipName>Car_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Remarks__c</fullName>
        <label>Car Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Car_Type__c</fullName>
        <label>Car Type</label>
        <picklist>
            <picklistValues>
                <fullName>PbP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Belong_To_Dealer__c</fullName>
        <formula>If ( ISPICKVAL(CreatedBy.UserType, "PowerPartner") , 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Belong to Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Category for Inquiry 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Category</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Class__c</fullName>
        <label>Case Class</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others-After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBDA Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBDA Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Complainant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Person complaining, aka complainant 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Complainant</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account Retail</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Case Complainant)</relationshipLabel>
        <relationshipName>Case_Complainant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Content_Status__c</fullName>
        <label>Case Content Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>知らない</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>満足である</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Dealer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Dealer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer in regards of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Primary Case Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Dealer)</relationshipLabel>
        <relationshipName>Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Department__c</fullName>
        <label>Case Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance&amp;insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coporate office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_FieldManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the complaint is with a field manager 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case FieldManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Follow_Up__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Follow-up action for this case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Follow Up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Involvement_MPC__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Complainant's involvement with MPC 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>MPC Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Media/Potential Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL/WL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authority (AQSIQ/CCA etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daimler Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Nature_MPC__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: MPC Case Nature 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case Nature(MPC)</label>
        <picklist>
            <picklistValues>
                <fullName>0=Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_RepeatCause__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Reason why repeat complaints were made 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Case RepeatCause</label>
        <picklist>
            <picklistValues>
                <fullName>0=No contact with customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Not satisfied with reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Situation__c</fullName>
        <label>Case Content(Status)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Source__c</fullName>
        <label>Case Source</label>
        <picklist>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign to dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_SubSubType__c</fullName>
        <label>Case SubSubType</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_SubType__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subtype of Case 
Used in: Page Layouts, Reports 

Modify History 
Modify By: Reak yin 2013.1.10
Modify Reason: Complaint Sub Type changed to Case Sub Type
*/</description>
        <label>Case SubType</label>
        <picklist>
            <controllingField>Case_Type__c</controllingField>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other operation department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Call Could Not Be Get Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Level Of Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-pre-sales service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer - Professionalism of  Sales Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-delivered date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-sales price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire or Gasbag Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-after sales service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-maintenance speciality and skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-maintenance latency time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer - Environment And Facility of Rest Area/Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-repaire/maintenance/fitting price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-change component quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-component delivery data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer-problem feedback processing time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product-quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product-others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA - Waiting Time of Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA-RSA service attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA - Professionalism of Rescue Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Consultant Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Time Of Finance Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreasonable Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <controllingField>Case_Class__c</controllingField>
            <picklistValues>
                <fullName>After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Central truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultanting Central microbus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer contact method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee repair &amp; maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual information change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing chance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network development department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase &amp; deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruit campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second car exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complain &amp; feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Mercedes-Benz driving Academy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CheckFlag_48H__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckFlag 48H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckFlag_72H__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckFlag 72H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Relevant_Repeat_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To quick close the repeat case.</inlineHelpText>
        <label>Close Relevant  Repeat Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint_Contact_FirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Creator_Department__c</fullName>
        <label>Complaint Creator Department</label>
        <picklist>
            <picklistValues>
                <fullName>CAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO/CO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complaint_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date customer complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_Related__c</fullName>
        <label>Complaint Related</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <label>Complaint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Tele__c</fullName>
        <label>Contact Person Tele</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number_or_Policy_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreateByCAC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create By CAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Critical_Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Background_Info__c</fullName>
        <label>Customer Background Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Care_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Care Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CAC Customer Care Team</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Issue__c</fullName>
        <label>Customer Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Preferred_Rep__c</fullName>
        <label>Customer Preferred Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request__c</fullName>
        <label>Request (What)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Requests_Transport__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the customer requested transport from the dealer linked to this complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Courtesy car required by customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A 満足</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B 納得</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Settlement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Statement__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Full statement of customer made at the time of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Customer Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Subsource__c</fullName>
        <label>Data Subsource</label>
        <picklist>
            <controllingField>Data_Source__c</controllingField>
            <picklistValues>
                <fullName>Weibo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS Shooting Break web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Coupe web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Coupe web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Cabriolet web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S web special-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inmobi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Web site _ after sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>baidu Brandzone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerScreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iQiyi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Registration__c</fullName>
        <label>1st  Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Visit_to_Dealership__c</fullName>
        <label>Date of Last Visit to Dealership</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Warranty_Expiry__c</fullName>
        <label>Date of Warranty Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeadLine__c</fullName>
        <label>DeadLine</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Branch_CHS__c</fullName>
        <formula>Case_Dealer__r.Branch_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Branch (CHS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Branch_ENG__c</fullName>
        <formula>Case_Dealer__r.Branch_name_ENG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Branch (ENG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Case_Category__c</fullName>
        <label>Dealer Case Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales &amp; Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftersales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>